--- a/authentication/frontend/src/components/LoginFromPage/LoginForm.css
+++ b/authentication/frontend/src/components/LoginFromPage/LoginForm.css
@@ -1,8 +1,14 @@
 body {
     background-color: grey;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 form {
     background-color: white;
+    height: 60%;
+    width: 50%;
 }
