--- a/frontend/src/components/LoginFromPage/LoginForm.css
+++ b/frontend/src/components/LoginFromPage/LoginForm.css
@@ -1,5 +1,5 @@
 body {
-    background-color: grey;
+    background-color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
@@ -8,7 +8,7 @@ body {
 }
 
 form {
-    background-color: white;
+    background-color: rgb(96, 134, 248);
     height: 60%;
     width: 50%;
 }
