--- a/frontend/src/components/AddNewBeachForm/AddNewBeachForm.css
+++ b/frontend/src/components/AddNewBeachForm/AddNewBeachForm.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     overflow-y: scroll;
 }
 
@@ -6,4 +6,4 @@ form {
     background-color: blueviolet;
     height: 60%;
     width: 60%;
-}
+} */
