--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -1,4 +1,6 @@
-.home-page-container {
+/* home page
+
+.hp-home-page-container {
     box-sizing: border-box;
     display: flex;
     justify-self: center;
@@ -7,41 +9,41 @@
     height: 100vh;
 }
 
-.background-image-behind-search-bar {
+.hp-background-image-behind-search-bar {
     position: absolute;
     top: 0px;
     margin-top: 0px;
-    height: 60vh;
-    width: 100vw;
-    background-color: rgb(119, 187, 233);
-    z-index: -5;
-    flex-shrink: 1;
-}
+    /* height: 60vh; */
 
-.banner-image {
+    /* background-color: rgb(119, 187, 233);
+    /* z-index: -5; */
+
+/* }
+
+.hp-banner-image {
     height: 100%;
     width: 100%;
     opacity: 0.58;
     flex-shrink: 1;
 }
 
-navigation-bar {
+.hp-navigation-bar {
     justify-content: center;
     align-items: flex-end;
     color: white;
     z-index: 1;
 }
 
-h2 {
+.hp-red-heading {
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 125%;
     color: #D32422;
     /* border: rgb(202, 202, 202) solid 4px; */
-    margin-top: 100px;
+    /* margin-top: 100px;
 }
 
-.kelp-logo {
+.hp-kelp-logo {
     font-size: 45px;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
@@ -51,12 +53,12 @@ h2 {
 
 }
 
-a {
+.hp-kelp-link {
     text-decoration: none;
     color: black;
 }
 
-.search-bar {
+.hp-search-bar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,11 +66,10 @@ a {
     height: 37px;
     width: 810px;
     /* border: black solid 4px; */
-    background-color: white;
+    /* background-color: white;
     color: rgb(139, 126, 126);
     opacity: 0.50;
     text-align: center;
     font-size: 1.25rem;
     margin-top: 5%;
-    z-index: -4;
-}
+    z-index: -4; */
