--- a/frontend/src/components/LoginFromPage/LoginForm.css
+++ b/frontend/src/components/LoginFromPage/LoginForm.css
@@ -1,14 +1,14 @@
-body {
+/* body {
     background-color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    justify-content: center;
+    /* justify-content: center;
     align-items: center;
-    flex-direction: column;
-}
+    flex-direction: column; */
 
-form {
+
+/* form {
     background-color: rgb(96, 134, 248);
     height: 60%;
     width: 50%;
-}
+} */
