--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,8 +1,8 @@
-ProfileButton {
+/* ProfileButton {
     color: rgb(248, 238, 238);
     border: black
 }
 
 link {
     background-color: black;
-}
+} */
