--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,169 @@
 /* TODO Add site wide styles */
+/* home page */
+body {
+    margin: 0px;
+}
+
+.hp-home-page-container {
+    box-sizing: border-box;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.hp-background-image-behind-search-bar {
+    position: absolute;
+    top: 0px;
+    margin-top: 0px;
+    height: 500px;
+    width: 100vw;
+    background-color: rgb(119, 187, 233);
+    z-index: -5;
+    flex-shrink: 1;
+
+}
+
+.hp-banner-image {
+    height: 100%;
+    width: 100%;
+    opacity: 0.58;
+    flex-shrink: 1;
+}
+
+.hp-navigation-bar {
+    justify-content: center;
+    align-items: flex-end;
+    color: white;
+    z-index: 1;
+}
+
+.hp-red-heading {
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 125%;
+    color: #D32422;
+    /* border: rgb(202, 202, 202) solid 4px; */
+    margin-top: 200px;
+}
+
+.hp-kelp-logo {
+    font-size: 45px;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 140px;
+    margin-bottom: 0%;
+    z-index: -3;
+
+}
+
+.hp-kelp-link {
+    text-decoration: none;
+    color: black;
+}
+
+.hp-search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 37px;
+    width: 810px;
+    /* border: black solid 4px; */
+    background-color: white;
+    color: rgb(139, 126, 126);
+    opacity: 0.50;
+    text-align: center;
+    font-size: 1.25rem;
+    margin-top: 5%;
+    z-index: -4;
+    border-radius: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+/* userProfile buttons */
+
+.up-edit-button{
+    cursor: pointer;
+    margin-right: 20px;
+    border-radius: 5px;
+    font-style: italic;
+    background-color: #fff;
+    border: 1px solid #d5d9d9;
+    box-shadow: rgb(213 217 217 / 50%) 0 2px 5px 0;
+    box-sizing: border-box;
+    color: #0f1111;
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+}
+
+
+
+.up-delete-button{
+    cursor: pointer;
+    margin-left: 30px;
+    border-radius: 5px;
+    font-style: italic;
+    background-color: #fff;
+    border: 1px solid #d5d9d9;
+    box-shadow: rgb(213 217 217 / 50%) 0 2px 5px 0;
+    box-sizing: border-box;
+    color: #0f1111;
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 29px;
+    padding: 0 10px 0 11px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+}
+
+
+
+/* create new review form */
+
+.crf-new-review-form-container {
+    box-sizing: border-box;
+
+    height: 450px;
+    width: 700px
+}
+
+.crf-id {
+    color: plum;
+}
+
+.crf-review-input {
+    margin-left: 30px;
+    background-color: white;
+}
+
+.crf-review-input {
+    width: 500px;
+    height: 250px;
+}
+
+.crf-beach-name {
+    margin-left: 30px;
+}
+
+.crf-post-review-button {
+    margin-top: 30px;
+    background-color: red;
+    width: 200px;
+    height: 40px;
+    color: white;
+    border-radius: 5px;
+    border: none;
+
+}
