--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,11 @@ body {
     margin: 0px;
 }
 
+/* Navigation */
+.profile-dropdown {
+    margin-left: 100px;
+}
+
 .hp-home-page-container {
     box-sizing: border-box;
     display: flex;
