--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 /* TODO Add site wide styles */
-/* home page */
+
 body {
     margin: 0px;
 }
@@ -9,6 +9,7 @@ body {
     margin-left: 100px;
 }
 
+/* homepage */
 .hp-home-page-container {
     box-sizing: border-box;
     display: flex;
@@ -139,7 +140,6 @@ body {
 
 .crf-new-review-form-container {
     box-sizing: border-box;
-
     height: 450px;
     width: 700px
 }
@@ -151,24 +151,143 @@ body {
 .crf-review-input {
     margin-left: 30px;
     background-color: white;
-}
-
-.crf-review-input {
     width: 500px;
     height: 250px;
+    border: solid 1px rgb(200, 200, 200);
+    border-radius: 5px;
 }
 
 .crf-beach-name {
     margin-left: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
 }
 
 .crf-post-review-button {
     margin-top: 30px;
-    background-color: red;
+    background-color: #E00A05;
     width: 200px;
     height: 40px;
     color: white;
     border-radius: 5px;
     border: none;
+    margin-left: 30px;
 
+}
+
+/* Beach List */
+.bl-big-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+
+.bl-each-beach-li {
+    border: rgb(206, 200, 200) solid 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70vw;
+    list-style: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 15px;
+    border-radius: 3px;
+    background-color: #fcfcfc;
+
+}
+.bl-a-tag {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+.bl-p-tag {
+    font-size: small;
+    color:rgb(139, 126, 126);
+}
+
+.bl-all-results {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: px;
+}
+
+
+/* Show One Beach */
+
+.ob-container {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+.ob-a {
+    font-size: 15px;
+}
+
+.ob-address {
+    position: relative;
+    font-display: flex;
+    justify-content: center;
+    align-items: center;
+    border: rgb(199, 199, 199) solid 1px;
+    font-weight: bold;
+    color: rgb(174, 171, 171);
+    height: 80px;
+    width: 200px;
+    margin-left: 80%;
+    padding-left: 30px;
+    border-radius: 5px;
+}
+
+.ob-review-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    font-weight: body;
+    background-color: rgb(202, 7, 7);
+    width: 150px;
+    height: 38px;
+    border-radius: 5px;
+    margin-left: 50px;
+}
+
+.ob-description {
+    font-size: smaller;
+    color:rgb(139, 126, 126)
+}
+
+/* Add a new beach */
+
+.ab-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: pink solid 2px;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 200px;
+}
+
+.ab-add-new-beach {
+    margin: 15px;
+}
+
+.ab-add-new-beach {
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
+}
+
+.ab-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #D32422;
+    color: white;
+    height: 30px;
 }
