--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -134,6 +134,21 @@ body {
     vertical-align: middle;
 }
 
+/* user profile - review list*/
+.profile-container {
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
+.up-review-container {
+    border: black solid 1px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+
+}
 
 
 /* create new review form */
@@ -176,16 +191,38 @@ body {
 }
 
 /* Beach List */
+
+.bl-container-div {
+    display: grid;
+    grid-template-columns: 2fr, 1fr;
+    gap: 0%;
+    grid-template-rows: 30% 70%;
+    height: 200px;
+}
+
+.beach-pic-container {
+    /* border:rgb(202, 7, 7) solid 1px; */
+    height: 150px;
+    width: 150px;
+    grid-column: 1;
+    grid-row: 1/2
+}
+.beachPic {
+    margin-top: 40px;
+    margin-left: 10px;
+    height: 100%;
+    width: 100%;
+}
+
 .bl-big-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
     box-sizing: border-box;
+
 }
 
 .bl-each-beach-li {
-    border: rgb(206, 200, 200) solid 1px;
+    border: rgba(206, 200, 200, 0.758) solid 1px;
     font-family: Arial, Helvetica, sans-serif;
     width: 70vw;
     list-style: none;
@@ -200,11 +237,22 @@ body {
     text-decoration: none;
     color: black;
     font-weight: bold;
+    grid-column: 2;
+    /* border: black solid 1px; */
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    height: 50px;
+    width: 800px;
+    font-size: 25px;
+
 }
 
 .bl-p-tag {
-    font-size: small;
-    color:rgb(139, 126, 126);
+    font-size: 20px;
+    color:rgb(51, 51, 51);
+    grid-column: 2;
+    margin-left: 30px;
 }
 
 .bl-all-results {
@@ -214,6 +262,16 @@ body {
 
 
 /* Show One Beach */
+
+.ob-img-container {
+    height: 400px;
+    width: 100vw;
+}
+
+.ob-img {
+    height: 100%;
+    width: 100%;
+}
 
 .ob-container {
     box-sizing: border-box;
@@ -295,4 +353,16 @@ body {
 /* review list */
 .rl-container {
     background-color: purple;
+}
+
+
+/* ratings */
+
+.star {
+    cursor: pointer;
+    transition: color 200ms;
+}
+
+input[type="radio"]{
+    display:none;
 }
