--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -201,7 +201,6 @@ body {
 }
 
 .beach-pic-container {
-    /* border:rgb(202, 7, 7) solid 1px; */
     height: 150px;
     width: 150px;
     grid-column: 1;
@@ -266,6 +265,8 @@ body {
 .ob-img-container {
     height: 400px;
     width: 100vw;
+    filter: brightness(55%);
+
 }
 
 .ob-img {
@@ -283,6 +284,16 @@ body {
 .ob-a {
     font-size: 15px;
 }
+.ob-h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    top: 250px;
+    left: 45px;
+    margin-top: 100px;
+    font-size: 45px;
+}
 
 .ob-address {
     position: relative;
@@ -291,12 +302,24 @@ body {
     align-items: center;
     border: rgb(199, 199, 199) solid 1px;
     font-weight: bold;
-    color: rgb(174, 171, 171);
-    height: 80px;
+    color: rgb(150, 150, 150);
+    height: 100px;
     width: 200px;
-    margin-left: 80%;
+    margin-right: 10px;
+    margin-right: 50px;
     padding-left: 30px;
     border-radius: 5px;
+}
+
+.below-banner {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 150px;
+}
+.address {
+    color: #027a97;
 }
 
 .ob-review-button {
@@ -305,18 +328,28 @@ body {
     align-items: center;
     text-decoration: none;
     color: white;
-    font-weight: body;
+    font-weight: bolder;
     background-color: rgb(202, 7, 7);
-    width: 150px;
-    height: 38px;
+    width: 200px;
+    height: 40px;
     border-radius: 5px;
     margin-left: 50px;
+    margin-top: 0px;
 }
 
 .ob-description {
     font-size: smaller;
-    color:rgb(139, 126, 126)
+    color:rgba(255, 255, 255, 0.083);
+    display: none;
 }
+
+/* One-Review */
+
+.review-container {
+    border: #0f1111 solid 2px;
+    margin: 20px;;
+}
+
 
 /* Add a new beach */
 
@@ -342,6 +375,7 @@ body {
 }
 
 .ab-button {
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
