Fully functioning. All of this code works on local host.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -160,6 +160,7 @@ body {
 
 /* homepage */
 .hp-home-page-container {
+    margin-top: 100px;
     box-sizing: border-box;
     display: flex;
     justify-self: center;
@@ -200,7 +201,7 @@ body {
     font-size: 125%;
     color: #D32422;
     /* border: rgb(202, 202, 202) solid 4px; */
-    margin-top: 350px;
+    margin-top: 60%;
 }
 
 .hp-kelp-logo-b {
@@ -339,6 +340,8 @@ body {
 /* user profile - review list*/
 .profile-container {
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 40px;
+
 
 }
 
@@ -358,7 +361,7 @@ body {
 .crf-new-review-form-container {
     box-sizing: border-box;
     height: 450px;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 .crf-id {
@@ -791,7 +794,7 @@ input[type="radio"]{
 
 
 /* demo nav on beach list */
-#demo-logout{
+.demo-logout{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -804,7 +807,7 @@ input[type="radio"]{
     border-radius: 4px;
 
 }
-#message {
+.message {
     color: #D32422;
     font-weight: bolder;
 }
@@ -875,5 +878,164 @@ input[type="radio"]{
 #prof-button {
     background-color: whitesmoke;
     border: none;
+}
 
+.demo-navigation2{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    position: absolute;
+    top:0;
+    left: 0;
+    height: 100px;
+    width: 100%;
+}
+
+#message-white {
+    color: white;
+    font-weight: bolder;
+}
+
+.demo-logout2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: white solid 3px;
+    color: white;
+    font-weight: bolder;
+    width: 100px;
+    height: 30px;
+    border-radius: 4px;
+}
+
+.nav-kelp-right-container2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 400px;
+    margin-left: 500px;
+}
+
+.nav-container {
+    /* background-color: purple; */
+    width: 100px;
+}
+
+#post-a-beach {
+    background-color: #D32422;
+    color: white;
+    border: none;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+    margin: 30px;
+}
+
+.none-session-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* background-color: purple; */
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#right-div-non-u {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    /* background-color: green; */
+    height: 50px;
+    width: 270px;
+    margin: 10px;
+}
+
+#orange0{
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+    margin-right: 200px;
+}
+
+#orange1 {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+#orange2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+    border: white solid 2px;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+}
+
+.none-session-container-k {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: whitesmoke;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* margin-left: */
+    z-index: 6;
+
+}
+
+
+.left-div-non-u-k {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 200px;
+    /* margin-right: 400px; */
+}
+
+.nav-kelp-left-container0{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 650px;
+}
+
+#log-1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(0, 0, 0);
+    font-weight: bolder;
+    text-decoration: none;
+    border: rgb(0, 0, 0) solid 2px;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+}
+
+#up-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+    border: white solid 2px;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: #D32422;
 }
